fixed scrolling messages view getting cut off

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -96,7 +96,9 @@ button #sendBtn {
 }
 
 #messages {
-	height: 92%;
+	position: absolute;
+	width: 100%;
+	height: calc(100% - 70px);
 	list-style-type: none;
 	margin: 0;
 	padding: 0;
